@@ -10,6 +10,8 @@ Changelog for 1.3.24
 * Fixed invoice date not printing on checks (Chris T, h/t Neil S)
 * Changed INSTALL to do make test, not of make install (Chris T h/t Kevin B)
 * Fixed framework for printing parts tumbnails in invoices (Chris T)
+* Upgrade now handles nulls in model field of makemodel (Chris T)
+* Fixed issue with comment in account.sql (Chris T)
 
 berend T is Berend Tober
 Chris T is Chris Travers
